# server/lib/routes.js
@@ -28,11 +28,11 @@ function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { de
 const router = _express.default.Router();
 
 ///////////////////////////////////////////////////////////////////////////////////////////
-router.post("/signin", (0, _middleware.default)(_schemas.default.userSignin), _userController.default.post);
-router.post("/signup", (0, _middleware.default)(_schemas.default.user), _userController.default.postSignup);
-router.patch("/promote/:id", _auth.default, _userController.default.promote);
-router.patch("/changecreds/:id", _auth.default, _userController.default.patch);
-router.delete("/deleteuser/:id", _auth.default, _userController.default.delete);
+router.post("/users/signin", (0, _middleware.default)(_schemas.default.userSignin), _userController.default.post);
+router.post("/users/signup", (0, _middleware.default)(_schemas.default.user), _userController.default.postSignup);
+router.patch("/users/promote/:id", _auth.default, _userController.default.promote);
+router.patch("/users/changecreds/:id", _auth.default, _userController.default.patch);
+router.delete("/users/deleteuser/:id", _auth.default, _userController.default.delete);
 router.get("/users/:id", _userController.default.getOne);
 router.get("/users/", _auth.default, _userController.default.getAll); //////////////////////////////////////////////////////////////////////////////////////////////
 ///////////////////////////////////////////////////////////////////////////////////////////
